tests/semantic/invalid/47_i1_inheritance_cycle.hulk
class A is B {}

class B is A {}
